--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 	<title>Animation Scroll</title>
 </head>
 <body>
-	
+	<section class="bg">
+		<h2>Lorem ipsum dolor sit.</h2>
+		<span class="skewedOne"></span>
+		<span class="skewedTwo"></span>
+	</section>
+	<section>
+		<h2>Lorem ipsum dolor sit amet consectetur.</h2>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, voluptatum. Dolorem qui suscipit nihil maiores deleniti, iste nesciunt nam sit iure laudantium explicabo, odit nisi provident sunt aperiam, accusantium ipsum atque doloribus! Natus, officiis nam id incidunt hic molestias veritatis reiciendis labore nesciunt libero officia, vitae maxime eius. Delectus, reprehenderit!</p>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum nemo pariatur odit odio modi, alias aliquam quo veniam error impedit ullam, ipsa obcaecati temporibus, excepturi corporis nihil autem enim quae quis repellendus cupiditate omnis. Nihil totam sapiente id consequuntur recusandae autem, aspernatur molestias quae expedita ut adipisci voluptate in mollitia dicta? Quam, doloribus necessitatibus velit laboriosam consequuntur amet aspernatur maiores. Eum corrupti earum architecto assumenda incidunt consequatur, vel nemo fugiat, error minus, deleniti nobis odio dignissimos optio alias illum blanditiis. Quibusdam beatae, numquam magnam obcaecati vitae iusto perspiciatis? Tempora minus ullam porro quas dolore quos odit officia, iusto magnam soluta?</p>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, recusandae? Eveniet fugiat quia quos commodi debitis consectetur hic numquam voluptatem illo suscipit eaque odit quaerat, accusantium adipisci iste repudiandae eos quas quibusdam explicabo dicta alias tenetur cumque! Asperiores, non dolorem repellat necessitatibus molestias, odio id amet sint similique sunt quo illum ullam et nobis sapiente quidem soluta totam a corrupti ab! Quia nam labore magnam ut nemo in accusantium maxime, dignissimos iure blanditiis neque et repellendus architecto, maiores qui eos, eveniet beatae provident! Quia nobis saepe aspernatur natus numquam corporis omnis enim, similique soluta ipsam eaque porro eligendi doloremque id neque accusantium iste sed. Repellat placeat necessitatibus veniam provident maiores, quos officia voluptatem, culpa repellendus ex laudantium esse. Numquam, autem quo. Facere animi ratione veritatis libero, ab adipisci illum aspernatur dolore. Vel maiores laudantium itaque unde quasi ipsum porro rem neque facere quaerat eveniet, accusamus velit. Ut rem asperiores quidem.</p>
+	</section>
 </body>
 <!-- JS -->
 <script src="./sources/js/main.js"></script>
